// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 18px;
  line-height: 24px;
  font-weight: 700;
  color: #001E2B;
  margin-top: 24px;
  margin-bottom: 8px;
  color: var(--font-color-primary);
}

.emotion-1 {
  position: absolute;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 0 10px;
  visibility: hidden;
}

.emotion-2 {
  color: #889397;
  vertical-align: middle;
  margin-top: -2px;
}

.emotion-3 {
  display: inline;
  left: 0;
  top: 0;
  margin-top: -85px;
  position: absolute;
  padding-bottom: 2px;
}

@media only screen and (max-width: 767px) {
  .emotion-3 {
    margin-top: -85px;
  }
}

<h3
    class="contains-headerlink emotion-0"
    weight="medium"
  >
    Create an administrative username and password
    <a
      class="headerlink emotion-1"
      href="#create-an-administrative-username-and-password"
      title="Permalink to this heading"
    >
      <svg
        aria-label="Link Icon"
        class="emotion-2"
        fill="none"
        height="12"
        role="img"
        viewBox="0 0 16 16"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.039 9.953a3.596 3.596 0 0 1-.327-.38l1.45-1.445a1.553 1.553 0 0 0 2.496.423l2.885-2.87a1.57 1.57 0 0 0 .01-2.213 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.542 3.542 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.542 3.542 0 0 1-5.025-.022Z"
          fill="currentColor"
        />
        <path
          d="M9.961 6.047c.12.12.228.248.327.38l-1.45 1.445a1.553 1.553 0 0 0-2.496-.423l-2.885 2.87a1.57 1.57 0 0 0-.01 2.213 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.542 3.542 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.542 3.542 0 0 1 5.025.022Z"
          fill="currentColor"
        />
      </svg>
      <div
        class="emotion-3"
        id="create-an-administrative-username-and-password"
      />
    </a>
  </h3>
</DocumentFragment>
`;

exports[`renders correctly in dark mode 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 18px;
  line-height: 24px;
  font-weight: 700;
  color: #E8EDEB;
  margin-top: 24px;
  margin-bottom: 8px;
  color: var(--font-color-primary);
}

.emotion-1 {
  position: absolute;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 0 10px;
  visibility: hidden;
}

.emotion-2 {
  color: #C1C7C6;
  vertical-align: middle;
  margin-top: -2px;
}

.emotion-3 {
  display: inline;
  left: 0;
  top: 0;
  margin-top: -85px;
  position: absolute;
  padding-bottom: 2px;
}

@media only screen and (max-width: 767px) {
  .emotion-3 {
    margin-top: -85px;
  }
}

<h3
    class="contains-headerlink emotion-0"
    weight="medium"
  >
    Create an administrative username and password
    <a
      class="headerlink emotion-1"
      href="#create-an-administrative-username-and-password"
      title="Permalink to this heading"
    >
      <svg
        aria-label="Link Icon"
        class="emotion-2"
        fill="none"
        height="12"
        role="img"
        viewBox="0 0 16 16"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.039 9.953a3.596 3.596 0 0 1-.327-.38l1.45-1.445a1.553 1.553 0 0 0 2.496.423l2.885-2.87a1.57 1.57 0 0 0 .01-2.213 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.542 3.542 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.542 3.542 0 0 1-5.025-.022Z"
          fill="currentColor"
        />
        <path
          d="M9.961 6.047c.12.12.228.248.327.38l-1.45 1.445a1.553 1.553 0 0 0-2.496-.423l-2.885 2.87a1.57 1.57 0 0 0-.01 2.213 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.542 3.542 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.542 3.542 0 0 1 5.025.022Z"
          fill="currentColor"
        />
      </svg>
      <div
        class="emotion-3"
        id="create-an-administrative-username-and-password"
      />
    </a>
  </h3>
</DocumentFragment>
`;
